    . [16465] FTBFS on armhf, ppc, s390: Errors while running CTest
    . [16696] Build with OpenCV fails with msvc (/MT conflicts with /MD)
    . [16781] Unable to open .pgm saved with Matlab imwrite
    . [16823] Problems with camera calibration code
    . [16889] Link error with CMU 1394 on win x64 arch
    . [16895] undefined reference to `vpGaussRand::gaussianDraw()'
----------------------------------------------
ViSP 2.8.0 (released July 24th, 2013)
  - New features
    . New camera calibration tool: example/camera_calibration.cpp
  - Improvements
    . vpV4l2Grabber and vp1394CMUGrabber does no more require a call to
      open(I).
    . In vp1394CMUGrabber new getters/setters for the framerate, shutter, gain.
      It is now possible to change the settings in the acquisition loop.
    . An exceptions is throwned when moving-edges are not initialized
      (vpMeTracker, vpMeLine, vpMeEllipse)
    . In model-based trackers, improve face visibility test using Ogre ray
      tracing when faces are concave or not oriented counter clockwise.
    . Still in model-based trackers, add functionalities to use clipping planes.
    . ViSP can now be used with pkg-config
    . New fonctions in vp1394TwoGrabber to turn auto shutter and auto gain
      on. Also new getter for auto shutter and auto gain min/max values.
    . Support Visual Studio 2012 (MSVC11)
    . Introduce C++ visibility support as described here
      http://gcc.gnu.org/wiki/Visibility
    . Better support of image formats: *.tiff, *.jpeg, *.bmp, *.pbm, ...
  - Examples
    . Introduction of tutorials as minimalist line by line illustrated examples.
  - Bug fixed
    . [15404] Segfault in vpMbTracker derived classes around Coin SoDB::init()
      and SoDB::finish() usage
    . [15410] Robot wireframe simulator hangs
    . [15422] Build issues with ffmpeg 1.0.1 third party
    . [15475] Segfault in cv::Mat(BGR) to vpImage(grey) conversion