@@ -37,6 +37,7 @@ ViSP under development version
     . [16823] Problems with camera calibration code
     . [16889] Link error with CMU 1394 on win x64 arch
     . [16895] undefined reference to `vpGaussRand::gaussianDraw()'
+    . [16919] Unable to link with OpenCV 2.4.8 under Windows
 ----------------------------------------------
 ViSP 2.8.0 (released July 24th, 2013)
   - New features
